--- a/index.html
+++ b/index.html
@@ -250,8 +250,10 @@
 
 
         <div class="footer">
-            <p> Desenvolvido por Paulo Guedes - <a href="https://github.com/pauloguedes96" style="color: white;"> GitHub
-                </a> </p>
+            <p> Desenvolvido por</p>
+                <a href="https://connecttwebtest.netlify.app/" target="_blank">
+                <img src="./images/connect.png" alt="">
+                </a>
         </div>
 
         <!-- apenas indice menu -->
