--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 
         <div class="footer">
             <p> Desenvolvido por</p>
-                <a href="https://connecttwebtest.netlify.app/" target="_blank">
+                <a href="https://connecttweb.netlify.app/" target="_blank">
                 <img src="./images/connect.png" alt="">
                 </a>
         </div>
